--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -8,7 +8,7 @@ $descktopSize   : 1000px;
 
 // color
 $colorMain      : #FFCB47;
-$colorBlack     : #272932;
+$colorBlack     : rgb(39, 41, 50);
 $colorGray      : #8F857D;
 $colorWhite     : #FFFBFE;
 
