--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -4,7 +4,7 @@
 // screen size
 $mobileSize     : 300px;
 $tabletSize     : 700px;
-$descktopSize   : 1000px;
+$desktopSize   : 1000px;
 
 // color
 $colorMain      : #FFCB47;
