--- a/src/assets/scss/devices/_tablet.scss
+++ b/src/assets/scss/devices/_tablet.scss
@@ -103,7 +103,8 @@
         }
 
         .Project-Card{
-            width: 30%;
+            width: 45%;
+            height: 45vh;
             padding: 0;
             row-gap: 0;
             position: relative;
@@ -112,6 +113,7 @@
             flex-direction: column;
             justify-content: end;
             transition: .5s ease;
+            justify-content: start;
             &:hover figcaption{
                 height: 100%;
                 bottom: 0;
@@ -125,6 +127,10 @@
             }
            
         }
+
+        img{
+            display: flex;
+        }
         
         figcaption{
             row-gap: 0;
@@ -137,7 +143,7 @@
             background-color: rgba(39, 41, 50, .9);
             transition: .5s ease;
             justify-content: center;
-            bottom: -5vh;
+            bottom: -15vh;
 
         }
         a{
