--- a/src/assets/scss/devices/_mobile.scss
+++ b/src/assets/scss/devices/_mobile.scss
@@ -2,7 +2,7 @@
 
     //HEADER START//
     header{
-        background-image: url('../assets/img/protfolio-header.jpg');
+        background-image: url('/img/protfolio-header.jpg');
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
