--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,7 +15,7 @@ html {
 
 @media (min-width: 300px) {
   header {
-    background-image: url("../assets/img/protfolio-header.jpg");
+    background-image: url("/img/protfolio-header.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
